Giriş işlemleri implemente edildi
giriş ve kaydol activityleri oluşturuldu email ve şifre ile giriş işlemi
yapıldı ancak firebase sha1 kodu eklenemediği için sisteme giriş
yapamadı.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".DetailActivity"></activity>
+        <activity android:name=".DetailActivity" />
+        <activity android:name=".loginProcess.LoginActivity" />
+        <activity android:name=".loginProcess.Register"></activity>
     </application>
 
 </manifest>
