--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,13 +28,12 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.1.1'
     compile 'com.squareup.okhttp3:okhttp:3.6.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.google.firebase:firebase-auth:10.0.1'
-    compile 'com.google.firebase:firebase-database:10.0.1'
+    compile 'com.google.firebase:firebase-auth:10.2.4'
+    compile 'com.google.firebase:firebase-database:10.2.4'
+    compile 'com.google.firebase:firebase-core:10.2.4'
     compile 'com.android.support:design:23.0.1'
     testCompile 'junit:junit:4.12'
 }
-
-
 
 
 apply plugin: 'com.google.gms.google-services'
